# ctrl-alt-deceit

./: .gitignore  CurrentApi.py  README.md  finnhub.py  gnewsapi.py  main-news-api.py  pyproject.toml  requirements.txt  test.py
dtomasiewicz/: finnhub_test.py  gemini_test.py  openai_test.py  perplexity_test.py  polygon_io_test.py
mdronski/: main.py  pyproject.toml
mdronski/notebooks/: langchain_experiments.ipynb
notebooks/: md_gradio_experiments.ipynb  md_langchain_experiments.ipynb
src/app/: agent.py  gradio_app.py
src/app/api/: finnhub.py  gnewsapi.py  newsorgapi.py
src/app/tools/: __init__.py  tavily.py
