[project]
name = "ctrl-alt-deceit"
version = "0.1.0"
description = "Hackhathon project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.29.0",
    "gradio>=5.42.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.30",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.4",
    "matplotlib>=3.10.5",
    "newsapi-python>=0.2.7",
    "notebook>=7.4.5",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.10",
    "textblob>=0.19.0",
]
[tool.uv]
package = true

[project.scripts]
app = "app.gradio_app:main"
